<resources>
    <string name="app_name">RMM2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textView_username">Username</string>
    <string name="editText_username">username</string>
    <string name="textView_password">Password</string>
    <string name="editText_password">password</string>
    <string name="button_login">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_link_to_register">Sign up now.</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Login Me.</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="icon_content_description">test</string>
    <string name="test_title">Title</string>
    <string name="test_description">Description</string>
    <string name="action_addHabit">Add Habit</string>

    <string name="title_activity_add_habit">AddHabitActivity</string>
    <string name="addHabit">Add Habit</string>
    <string name="addHabitNameFieldSubtitle">Habit name</string>
    <string name="setFrequency">Set frequency of your habit</string>
    <string name="title_activity_habit_detail">HabitDetailActivity</string>
    <string name="editHabit">Edit Habit</string>
    <string name="deleteHabit">Delete Habit</string>
    <string name="title_activity_edit_habit">EditHabitActivity</string>
    <string name="notification_habit_title">Habit today</string>
    <string name="notification_habit_description">Keep your habits in check you miserable maggot!</string>
    <string name="notification_habit_frequency_title">Testing Habit Service</string>
    <string name="notification_habit_frequency_description">Building probability time limit for complete habits for one month</string>
    <string name="releaseStatistics">Synchronization</string>

    <!-- String arrays! -->

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Habits</item>
        <item>Add Habit</item>
        <item>Settings</item>
        <item>GoPro</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_people</item>
        <item>@mipmap/ic_photos</item>
        <item>@mipmap/ic_communities</item>
        <item>@mipmap/ic_pages</item>
        <item>@mipmap/ic_whats_hot</item>
    </array>

    <string-array name="periodicity_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <string-array name="edit_periodicity_array">
        <item>No change</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

</resources>
