<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/launcherActivity_username_block_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/launcherActivity_password_block_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/textView_username"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:hint="@string/editText_username"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/launcherActivity_password_block_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_login"
        android:layout_alignLeft="@+id/launcherActivity_username_block_layout"
        android:layout_alignStart="@+id/launcherActivity_username_block_layout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/textView_password"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:hint="@string/editText_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/launcherActivity_password_block_layout"
        android:layout_alignRight="@+id/launcherActivity_password_block_layout"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/button_login"
        android:textSize="13sp"
        android:textStyle="bold" />

</RelativeLayout>
